# handwriting-web

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_en.md  backend.py  docker-compose.yml  format.py  frontend-backend.yaml  handwrite.py  ignore_rm.bat  package-lock.json  package.json  release.config.js  requirements.txt  site-config.env  vite.config.js
.github/: FUNDING.yml  dependabot.yml  release-please.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend.yml  frontend.yml  manual-workflow.yml  mysql.yml  release-please.yml  semantic_release.yml  test_backend.yml  vps_pull.yml
backend/: CHANGELOG.md  README.md  app.py  backend.py  dockerfile.backend  identify.py  pdf.py  pyproject.toml  requirements.txt  schedule_clean.py  task_store.py  task_types.py
backend/temp/tmpblr3qwo9/: .cleanup_later
backend/temp/tmpjjxf4t56/: .cleanup_later
backend/tests/: conftest.py  locustfile.py  test_generate_concurrency.py  test_pdf_zip.py
frontend/: .eslintrc.js  CHANGELOG.md  dockerfile.frontend  lint-staged.config.js  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: .htaccess  index.html  manifest.json  robots.txt  sitemap.xml  sw.js
frontend/src/: App.vue  i18n.js  main.js
frontend/src/components/: BookSplash.vue  Introduce.vue  PWAInstallPrompt.vue  UserFeedback.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: AboutView.vue  HomeView.vue  TextInput.vue  UserLayout.vue  UserLogin.vue  UserRegister.vue
mysql/: dockerfile.mysql  init.sql
serverless/: package-lock.json  package.json  vercel.json
serverless/api/: sendEmail.js
