[tool.poetry]
name = "handwriting-backend"
version = "1.0.0"
description = "handwriting-backend"
authors = ["Liuweiqing liuweiqing147@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-multipart = "*"
slowapi = "*"
handrightbeta = "8.7.0"
pillow = "10.2.0"
opencv-python = "4.8.0.74"
numpy = "1.25.0"
scikit-learn = "1.3.0"
pymupdf = "1.23.5"
pypandoc = "1.12"
pypdf2 = "3.0.1"
python-docx = "0.8.11"
python-dotenv = "1.0.0"
sentry-sdk = "1.27.1"
schedule = "1.2.1"
psutil = "*"
werkzeug = "2.3.8"
gunicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
